@@ -1092,25 +1092,29 @@ sub _single_transformer {
     return @return;
 }
 
+sub _filter_components {
+    my ( $args, @components ) = @_;
+
+    for my $name ( keys %$args ) {
+        my $value;
+
+        @components = grep {
+               $_->can( $name )
+            && defined ( $value = $_->$name )
+            && $value eq $args->{ $name }
+        } @components;
+    }
+
+    return \@components;
+}
+
 sub get_deflators {
     my $self = shift;
     my %args = _parse_args(@_);
 
     my @x = map { @{ $_->get_deflators(@_) } } @{ $self->_elements };
 
-    if ( exists $args{name} ) {
-        @x = grep { $_->name eq $args{name} } @x;
-    }
-
-    if ( exists $args{type} ) {
-        @x = grep { $_->type eq $args{type} } @x;
-    }
-
-    if ( exists $args{nested_name} ) {
-        @x = grep { $_->nested_name eq $args{nested_name} } @x;
-    }
-
-    return \@x;
+    return _filter_components( \%args, @x );
 }
 
 sub get_filters {
@@ -1119,19 +1123,7 @@ sub get_filters {
 
     my @x = map { @{ $_->get_filters(@_) } } @{ $self->_elements };
 
-    if ( exists $args{name} ) {
-        @x = grep { $_->name eq $args{name} } @x;
-    }
-
-    if ( exists $args{type} ) {
-        @x = grep { $_->type eq $args{type} } @x;
-    }
-
-    if ( exists $args{nested_name} ) {
-        @x = grep { $_->nested_name eq $args{nested_name} } @x;
-    }
-
-    return \@x;
+    return _filter_components( \%args, @x );
 }
 
 sub get_constraints {
@@ -1140,19 +1132,7 @@ sub get_constraints {
 
     my @x = map { @{ $_->get_constraints(@_) } } @{ $self->_elements };
 
-    if ( exists $args{name} ) {
-        @x = grep { $_->name eq $args{name} } @x;
-    }
-
-    if ( exists $args{type} ) {
-        @x = grep { $_->type eq $args{type} } @x;
-    }
-
-    if ( exists $args{nested_name} ) {
-        @x = grep { $_->nested_name eq $args{nested_name} } @x;
-    }
-
-    return \@x;
+    return _filter_components( \%args, @x );
 }
 
 sub get_inflators {
@@ -1161,19 +1141,7 @@ sub get_inflators {
 
     my @x = map { @{ $_->get_inflators(@_) } } @{ $self->_elements };
 
-    if ( exists $args{name} ) {
-        @x = grep { $_->name eq $args{name} } @x;
-    }
-
-    if ( exists $args{type} ) {
-        @x = grep { $_->type eq $args{type} } @x;
-    }
-
-    if ( exists $args{nested_name} ) {
-        @x = grep { $_->nested_name eq $args{nested_name} } @x;
-    }
-
-    return \@x;
+    return _filter_components( \%args, @x );
 }
 
 sub get_validators {
@@ -1182,19 +1150,7 @@ sub get_validators {
 
     my @x = map { @{ $_->get_validators(@_) } } @{ $self->_elements };
 
-    if ( exists $args{name} ) {
-        @x = grep { $_->name eq $args{name} } @x;
-    }
-
-    if ( exists $args{type} ) {
-        @x = grep { $_->type eq $args{type} } @x;
-    }
-
-    if ( exists $args{nested_name} ) {
-        @x = grep { $_->nested_name eq $args{nested_name} } @x;
-    }
-
-    return \@x;
+    return _filter_components( \%args, @x );
 }
 
 sub get_transformers {
@@ -1203,19 +1159,7 @@ sub get_transformers {
 
     my @x = map { @{ $_->get_transformers(@_) } } @{ $self->_elements };
 
-    if ( exists $args{name} ) {
-        @x = grep { $_->name eq $args{name} } @x;
-    }
-
-    if ( exists $args{type} ) {
-        @x = grep { $_->type eq $args{type} } @x;
-    }
-
-    if ( exists $args{nested_name} ) {
-        @x = grep { $_->nested_name eq $args{nested_name} } @x;
-    }
-
-    return \@x;
+    return _filter_components( \%args, @x );
 }
 
 sub _require_deflator {
