@@ -3,6 +3,9 @@
     - Bugfix: save_to_model() many_to_many multi-value fields where 
       'default_column' included the table name (or 'me.') failed.
 
+    - get_* (fields, elements, constraints, etc) now accept any valid method
+      as a search parameter rather than a limited subset.
+
 0.02004 2008-02-22
 
     - Incompatible Change: $upload->headers no longer returns a hashref, it now
